@@ -1,3 +1,7 @@
+2006-12-20  Alex Roitman  <shura@gramps-project.org>
+	* src/PluginUtils/_Plugins.py (PluginDialog.__init__): Connect to
+	signal in the parent class.
+
 2006-12-20  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_PersonView.py: use a container for bookmarks to prevent
 	lost of data (bug #777)
